codigo en actualizado 1.1

--- a/index.html
+++ b/index.html
@@ -148,11 +148,13 @@
                             <tr>
                                 <th class="text-center">ID</th>
                                 <th>Codigo</th>
-                                <th >Fecha Registro</th>
+                                <th>Fecha Registro</th>
                                 <th>Descripción</th>
                                 <th>Monto Apertura</th>
+                                <th>Monto Disponible</th>
+                                <th>Monto Cierre</th>
                                 <th>Estado</th>
-                                <th class="table-options">Opciones</th>
+                                <th class="caja-options">Opciones</th>
                             </tr>
                         </thead>
                         <tbody id="cajaBody">
@@ -162,7 +164,9 @@
                                 <td>2023-10-01</td>
                                 <td>Pago de Luz</td>
                                 <td>500</td>
-                                <td>Pagado</td>
+                                <td>200</td>
+                                <td>300</td>
+                                <td>Abierto</td>
                                 <td>
                                     <button class="btn btn-danger btn-eliminar">Eliminar</button>
                                 </td>
